ensure text remains visible during webfont load

--- a/app/assets/stylesheets/fonts.css
+++ b/app/assets/stylesheets/fonts.css
@@ -3,6 +3,7 @@
   src: url('OpenSans-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
+  font-display: auto;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   src: url('OpenSans-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
+  font-display: auto;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
   src: url('OpenSans-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
+  font-display: auto;
 }
 
 @font-face {
@@ -24,4 +27,5 @@
   src: url('ShareTechMono-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
+  font-display: auto;
 }
